--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
     <div class="about">
         <div class="main">
-            <img class="" src="/content/1.png" alt="">
+            <img class="" src="/content/1.jpg" alt="">
             <div class="about-text">
                 <h2>About Me</h2>
                 <h5>Developer & <span>Designer</span></h5>
