--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="pcard">
             <div class="content">
                 <h2>MD. MILON SHEIKH</h2>
-                    <img class="profile" src="/content/profile.jpg" alt="profile">
+                    <img class="profile" src="profile.jpg" alt="profile">
                 <a href="#">Read more</a>
             </div>
         </div>
@@ -55,7 +55,7 @@
 
     <div class="about">
         <div class="main">
-            <img class="" src="/content/1.jpg" alt="">
+            <img class="" src="1.jpg" alt="">
             <div class="about-text">
                 <h2>About Me</h2>
                 <h5>Developer & <span>Designer</span></h5>
